test/errors/type/str/replace2.yasl
''.replace(1, true, .str)
